misc/cgo/errors/testdata/issue18889.go
package main

import "C"

func main() {
	_ = C.malloc // ERROR HERE
}
